ADD: endpoint para actualizar una categoria
